# schon-internship-project

./: 404.html  Cargo.toml  README.md  project.db
frontend/: admin_dashboard.html  borrow_details.html  borrow_details_admin.html  browse_books.html  create_book.html  dashboard.html  edit_book.html  login.html  manage_books.html  signup.html  styles.css  users.html
frontend/js/: auth.js  borrow_details.js  borrow_details_admin.js  browse_books.js  create_book.js  edit_book.js  login.js  manage_books.js  signup.js  users.js
src/: db.rs  handlers.rs  lib.rs  main.rs
