[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
bcrypt = "0.15"
dotenv = "0.15"